--- a/_includes/people.html
+++ b/_includes/people.html
@@ -7,7 +7,7 @@
       path=include.img
       alt=include.name
       -%}
-      <div class="card-body">
+      <div class="card-body" style="padding: 0.5rem;">
         <h5 class="card-title text-center">{{- include.name -}}</h5>
         <p class="card-text text-center">{{- include.affiliation -}}</p>
       </div>
